# qt_data_collection_server

./: CMakeLists.txt  README.md  main.cpp  pch.h  用户手册.docx
database/: myDatabase.db
form/: caliwindow.ui  mainwindow.ui
include/: CaliData.h  CaliGraph.h  FSRDisplay.h  MsgData.h  MyServer.h  MySocket.h  RecvMsgThread.h  UdpSocket.h  caliwindow.h  mainwindow.h  socketThread.h
plot_resources/: 1_1_gait_2.npz
resources/: logo.rc  qt.conf  resources.qrc
scripts/: fsrADCT.json  fsrFactor37.json  fsrFactor39.json  fsrFactorBackup.json  tempOffset43.json
scripts/analysis/_internal/PIL/: _imaging.cp310-win_amd64.pyd  _imagingcms.cp310-win_amd64.pyd  _imagingft.cp310-win_amd64.pyd  _imagingmath.cp310-win_amd64.pyd  _imagingtk.cp310-win_amd64.pyd  _webp.cp310-win_amd64.pyd
scripts/analysis/_internal/matplotlib/: _c_internal_utils.cp310-win_amd64.pyd  _image.cp310-win_amd64.pyd  _path.cp310-win_amd64.pyd  _qhull.cp310-win_amd64.pyd  _tri.cp310-win_amd64.pyd  ft2font.cp310-win_amd64.pyd
scripts/analysis/_internal/matplotlib/backends/: _backend_agg.cp310-win_amd64.pyd
scripts/analysis/_internal/pandas/_libs/: algos.cp310-win_amd64.pyd  arrays.cp310-win_amd64.pyd  byteswap.cp310-win_amd64.pyd  groupby.cp310-win_amd64.pyd  hashing.cp310-win_amd64.pyd  hashtable.cp310-win_amd64.pyd  index.cp310-win_amd64.pyd  indexing.cp310-win_amd64.pyd  internals.cp310-win_amd64.pyd  interval.cp310-win_amd64.pyd  join.cp310-win_amd64.pyd  json.cp310-win_amd64.pyd  lib.cp310-win_amd64.pyd  missing.cp310-win_amd64.pyd  ops.cp310-win_amd64.pyd  ops_dispatch.cp310-win_amd64.pyd  pandas_datetime.cp310-win_amd64.pyd  pandas_parser.cp310-win_amd64.pyd  parsers.cp310-win_amd64.pyd  properties.cp310-win_amd64.pyd  reshape.cp310-win_amd64.pyd  sas.cp310-win_amd64.pyd  sparse.cp310-win_amd64.pyd  testing.cp310-win_amd64.pyd  tslib.cp310-win_amd64.pyd  writers.cp310-win_amd64.pyd
scripts/analysis/_internal/pandas/_libs/tslibs/: base.cp310-win_amd64.pyd  ccalendar.cp310-win_amd64.pyd  conversion.cp310-win_amd64.pyd  dtypes.cp310-win_amd64.pyd  fields.cp310-win_amd64.pyd  nattype.cp310-win_amd64.pyd  np_datetime.cp310-win_amd64.pyd  offsets.cp310-win_amd64.pyd  parsing.cp310-win_amd64.pyd  period.cp310-win_amd64.pyd  strptime.cp310-win_amd64.pyd  timedeltas.cp310-win_amd64.pyd  timestamps.cp310-win_amd64.pyd  timezones.cp310-win_amd64.pyd  tzconversion.cp310-win_amd64.pyd  vectorized.cp310-win_amd64.pyd
scripts/analysis/_internal/pandas/_libs/window/: aggregations.cp310-win_amd64.pyd  indexers.cp310-win_amd64.pyd
scripts/analysis/_internal/reportlab/graphics/: _renderPM.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/_lib/: _ccallback_c.cp310-win_amd64.pyd  _fpumode.cp310-win_amd64.pyd  messagestream.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/_lib/_uarray/: _uarray.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/fft/_pocketfft/: pypocketfft.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/fftpack/: convolve.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/integrate/: _dop.cp310-win_amd64.pyd  _lsoda.cp310-win_amd64.pyd  _odepack.cp310-win_amd64.pyd  _quadpack.cp310-win_amd64.pyd  _vode.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/interpolate/: _bspl.cp310-win_amd64.pyd  _fitpack.cp310-win_amd64.pyd  _ppoly.cp310-win_amd64.pyd  _rbfinterp_pythran.cp310-win_amd64.pyd  _rgi_cython.cp310-win_amd64.pyd  dfitpack.cp310-win_amd64.pyd  interpnd.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/linalg/: _cythonized_array_utils.cp310-win_amd64.pyd  _decomp_lu_cython.cp310-win_amd64.pyd  _decomp_update.cp310-win_amd64.pyd  _fblas.cp310-win_amd64.pyd  _flapack.cp310-win_amd64.pyd  _interpolative.cp310-win_amd64.pyd  _matfuncs_expm.cp310-win_amd64.pyd  _matfuncs_sqrtm_triu.cp310-win_amd64.pyd  _solve_toeplitz.cp310-win_amd64.pyd  cython_blas.cp310-win_amd64.pyd  cython_lapack.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/ndimage/: _nd_image.cp310-win_amd64.pyd  _ni_label.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/optimize/: _bglu_dense.cp310-win_amd64.pyd  _cobyla.cp310-win_amd64.pyd  _direct.cp310-win_amd64.pyd  _group_columns.cp310-win_amd64.pyd  _lbfgsb.cp310-win_amd64.pyd  _lsap.cp310-win_amd64.pyd  _minpack.cp310-win_amd64.pyd  _minpack2.cp310-win_amd64.pyd  _moduleTNC.cp310-win_amd64.pyd  _pava_pybind.cp310-win_amd64.pyd  _slsqp.cp310-win_amd64.pyd  _zeros.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/signal/: _max_len_seq_inner.cp310-win_amd64.pyd  _peak_finding_utils.cp310-win_amd64.pyd  _sigtools.cp310-win_amd64.pyd  _sosfilt.cp310-win_amd64.pyd  _spectral.cp310-win_amd64.pyd  _spline.cp310-win_amd64.pyd  _upfirdn_apply.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/sparse/: _csparsetools.cp310-win_amd64.pyd  _sparsetools.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/spatial/: _ckdtree.cp310-win_amd64.pyd  _distance_pybind.cp310-win_amd64.pyd  _distance_wrap.cp310-win_amd64.pyd  _hausdorff.cp310-win_amd64.pyd  _qhull.cp310-win_amd64.pyd  _voronoi.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/special/: _cdflib.cp310-win_amd64.pyd  _comb.cp310-win_amd64.pyd  _ellip_harm_2.cp310-win_amd64.pyd  _specfun.cp310-win_amd64.pyd  _ufuncs.cp310-win_amd64.pyd  _ufuncs_cxx.cp310-win_amd64.pyd  cython_special.cp310-win_amd64.pyd
scripts/analysis/_internal/scipy/stats/: _ansari_swilk_statistics.cp310-win_amd64.pyd  _biasedurn.cp310-win_amd64.pyd  _mvn.cp310-win_amd64.pyd  _qmc_cy.cp310-win_amd64.pyd  _sobol.cp310-win_amd64.pyd  _stats.cp310-win_amd64.pyd  _stats_pythran.cp310-win_amd64.pyd
scripts/analysis/_internal/statsmodels/nonparametric/: _smoothers_lowess.cp310-win_amd64.pyd
scripts/analysis/_internal/statsmodels/tsa/: _innovations.cp310-win_amd64.pyd
scripts/analysis/_internal/tornado/: speedups.pyd
src/: CaliData.cpp  CaliGraph.cpp  FSRDisplay.cpp  MsgData.cpp  MyServer.cpp  MySocket.cpp  RecvMsgThread.cpp  UdpSocket.cpp  caliwindow.cpp  mainwindow.cpp  socketThread.cpp
src_qCustomPlot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
(+52 files in other folders)
